data/collection/fixes/descriptions/scala/scala-6297
```scala
$ scala

Welcome to Scala version 2.9.2 (Java HotSpot(TM) Server VM, Java 1.6.0_06).
Type in expressions to have them evaluated.
Type :help for more information.

scala> ? /* actually U+E0020 character */
<console>:1: error: illegal character
       ?
       ^
/* now we'll enter U+2620 */
scala> ?java.io.IOException: Invalid UTF-8 first byte: -104
	at scala.tools.jline.internal.ReplayPrefixOneCharInputStream.setInputUTF8(ReplayPrefixOneCharInputStream.java:68)
	at scala.tools.jline.internal.ReplayPrefixOneCharInputStream.setInput(ReplayPrefixOneCharInputStream.java:43)
	at scala.tools.jline.UnixTerminal.readVirtualKey(UnixTerminal.java:188)
	at scala.tools.jline.console.ConsoleReader.readVirtualKey(ConsoleReader.java:933)
	at scala.tools.jline.console.ConsoleReader.readBinding(ConsoleReader.java:1127)
	at scala.tools.jline.console.ConsoleReader.readLine(ConsoleReader.java:1209)
	at scala.tools.jline.console.ConsoleReader.readLine(ConsoleReader.java:1161)
	at scala.tools.nsc.interpreter.JLineReader.readOneLine(JLineReader.scala:76)
	at scala.tools.nsc.interpreter.InteractiveReader$class.readLine(InteractiveReader.scala:44)
	at scala.tools.nsc.interpreter.JLineReader.readLine(JLineReader.scala:19)
	at scala.tools.nsc.interpreter.ILoop.readOneLine$1(ILoop.scala:533)
	at scala.tools.nsc.interpreter.ILoop.loop(ILoop.scala:550)
	at scala.tools.nsc.interpreter.ILoop.process(ILoop.scala:822)
	at scala.tools.nsc.MainGenericRunner.runTarget$1(MainGenericRunner.scala:67)
	at scala.tools.nsc.MainGenericRunner.process(MainGenericRunner.scala:80)
	at scala.tools.nsc.MainGenericRunner$.main(MainGenericRunner.scala:89)
	at scala.tools.nsc.MainGenericRunner.main(MainGenericRunner.scala)

That entry seems to have slain the compiler.  Shall I replay
your session? I can re-run each line except the last one.
[y/n]Exception in thread "main" java.io.IOException: Invalid UTF-8 first byte: -96
	at scala.tools.jline.internal.ReplayPrefixOneCharInputStream.setInputUTF8(ReplayPrefixOneCharInputStream.java:68)
	at scala.tools.jline.internal.ReplayPrefixOneCharInputStream.setInput(ReplayPrefixOneCharInputStream.java:43)
	at scala.tools.jline.UnixTerminal.readVirtualKey(UnixTerminal.java:188)
	at scala.tools.jline.console.ConsoleReader.readVirtualKey(ConsoleReader.java:933)
	at scala.tools.nsc.interpreter.JLineReader$JLineConsoleReader.readOneKey(JLineReader.scala:48)
	at scala.tools.nsc.interpreter.JLineReader.readOneKey(JLineReader.scala:77)
	at scala.tools.nsc.interpreter.InteractiveReader$class.readYesOrNo(InteractiveReader.scala:30)
	at scala.tools.nsc.interpreter.JLineReader.readYesOrNo(JLineReader.scala:19)
	at scala.tools.nsc.interpreter.ILoop$$anonfun$15.fn$1(ILoop.scala:518)
	at scala.tools.nsc.interpreter.ILoop$$anonfun$15.apply(ILoop.scala:521)
	at scala.tools.nsc.interpreter.ILoop$$anonfun$15.apply(ILoop.scala:500)
	at scala.tools.nsc.interpreter.ILoop.loop(ILoop.scala:551)
	at scala.tools.nsc.interpreter.ILoop.process(ILoop.scala:822)
	at scala.tools.nsc.MainGenericRunner.runTarget$1(MainGenericRunner.scala:67)
	at scala.tools.nsc.MainGenericRunner.process(MainGenericRunner.scala:80)
	at scala.tools.nsc.MainGenericRunner$.main(MainGenericRunner.scala:89)
	at scala.tools.nsc.MainGenericRunner.main(MainGenericRunner.scala)

/* scala crashed on reading input, before even Return was pressed */
```